--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,3 +4,8 @@
 # VITE_API_URL=http://localhost:8000
 VITE_API_URL=
 
+
+# 允许访问的 Host 列表（逗号或空白分隔），用于 Vite 开发服务器 server.allowedHosts
+# 示例：
+# VITE_ALLOWED_HOSTS=baidu.com, dev.example.com, *.internal
+VITE_ALLOWED_HOSTS=
